--- a/Slovak/main/MiuiAod.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiAod.apk/res/values-sk/strings.xml
@@ -259,4 +259,6 @@ N e"</string>
     <string name="wednesday_shortest">S</string>
     
     <string name="theme_manager_other">Viac položiek</string>    
+    <string name="add_from_local">Vybrať obrázok</string>    
 </resources>
+
