--- a/Slovak/main/MiuiScreenshot.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiScreenshot.apk/res/values-sk/strings.xml
@@ -221,4 +221,10 @@ dlhý screenshot"</string>
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+    
+    <string name="global_pad">Môj tablet</string>
+    <string name="global_pc">Môj laptop</string>
+    <string name="global_phone">Môj telefón</string>
+    <string name="device_list_all">Všetky zariadenia</string>
+    <string name="device_list_more">Viac</string>        
 </resources>
