--- a/Slovak/main/Weather.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Weather.apk/res/values-sk/strings.xml
@@ -371,4 +371,11 @@ Zadajte vaše mesto manuálne"</string>
     <string name="xiaomi_weather_description_title">O Počasí</string>
     <string name="yesterday">Včera</string>
     <string name="your_location">Vaša poloha</string>
+    
+    <string name="setting_notification_manager">Upozornenia</string>
+    <string name="setting_used_to_push_reminder">Dostávať varovania na počasie</string>    
+    <string name="indices_wind_direction_east">V</string>
+    <string name="indices_wind_direction_north">S</string>
+    <string name="indices_wind_direction_south">J</string>
+    <string name="indices_wind_direction_west">Z</string>    
 </resources>
