--- a/Slovak/main/Provision.apk/res/values-sk-rSK/strings.xml
+++ b/Slovak/main/Provision.apk/res/values-sk-rSK/strings.xml
@@ -531,5 +531,6 @@ Pred použitím tejto funkcie musíte súhlasiť so Zásadami ochrany osobných 
     <string name="yesterday">Včera</string>
     <string name="zone_picker_title">Vyberte časovú zónu</string>
     
-<string name="location_introduction_qcom">Služby určovania polohy používajú určovanie polohy na poskytovanie služieb špecifických pre vašu polohu.</string>    
+<string name="location_introduction_qcom">Služby určovania polohy používajú určovanie polohy na poskytovanie služieb špecifických pre vašu polohu.</string>   
+    <string name="create_shortcut">Odkaz na domácej obrazovke</string> 
 </resources>
