--- a/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
+++ b/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
@@ -457,4 +457,52 @@
 <string name="hs_guide_dialog_button_confirm">Rozumiem</string>
      <string name="hs_guide_dialog_message">Táto aplikácia ešte nebola optimalizovaná pre nový režim na šírku. Namiesto toho bola prepnutá na iné kompatibilné rozloženie.</string>
      <string name="hs_guide_dialog_title">Upozornenie</string> 
+     
+<string name="back_double_tap">Dvojité klepnutie späť</string>
+    <string name="back_tap">Klepnutie späť</string>
+    <string name="back_triple_tap">Trojité klepnutie späť</string>
+    <string name="change_brightness">Upraviť jas</string>
+    <string name="close_app">Zavrieť aktuálnu aplikáciu</string>
+    <string name="double_click_power_key">Dvakrát stlačte tlačidlo napájania</string>
+    <string name="double_click_volume_down_when_lock">Dvakrát stlačte zníženie hlasitosti, keď je obrazovka uzamknutá</string>
+    <string name="double_knock">Dvojité klepnutie kolenom</string>
+    <string name="dump_log">Získať denníky súvisiace s problémami</string>
+    <string name="fingerprint_double_tap">Dvakrát klepnite na snímač odtlačkov prstov</string>
+    <string name="gesture_function_dialog_message">%1$s sa používa pre \"%2$s\". Nahradiť reťazcom \"%3$s\"?</string>
+    <string name="go_to_sleep">Vypnúť obrazovku</string>
+    <string name="key_combination_power_back">Zapínanie + Späť</string>
+    <string name="key_combination_power_home">Napájanie + Domov</string>
+    <string name="key_combination_power_menu">Napájanie + Menu</string>
+    <string name="key_combination_power_volume_down">Znížiť hlasitosť + Vypnúť</string>
+    <string name="key_none">Žiadne</string>
+    <string name="knock_gesture_v">Nakreslite V kĺbovým kĺbom</string>
+    <string name="knock_long_press_horizontal_slid">Stlačte a potiahnite kĺbom vodorovne</string>
+    <string name="knock_slide_shape">Nakreslite kruh kĺbom prsta</string>
+    <string name="launch_calculator">Kalkulačka</string>
+    <string name="launch_camera">Spustiť fotoaparát</string>
+    <string name="launch_control_center">Ovládacie centrum</string>
+    <string name="launch_google_search">Spustite Asistenta Google</string>
+    <string name="launch_notification_center">Tieň upozornení</string>
+    <string name="launch_recents">Spustiť Nedávne</string>
+    <string name="launch_smarthome">Xiaomi Magic Control</string>
+    <string name="launch_voice_assistant">Spustiť hlasového asistenta</string>
+    <string name="long_press_back_key">Dlho stlačte tlačidlo Späť</string>
+    <string name="long_press_buttom_key">Na uzamknutej obrazovke dlho stlačte tlačidlo Domov</string>
+    <string name="long_press_home_key">Dlho stlačte tlačidlo Domov</string>
+    <string name="long_press_menu_key">Dlho stlačte tlačidlo Menu</string>
+    <string name="long_press_menu_key_when_lock">Na uzamknutej obrazovke dlho stlačte tlačidlo Menu</string>
+    <string name="long_press_power_key">Dlho stlačte tlačidlo napájania</string>
+    <string name="long_press_power_key_half_second">Stlačte a podržte tlačidlo napájania pre %ss</string>
+    <string name="long_press_volume_down">Znížte hlasitosť dlho</string>
+    <string name="mute">Tichý režim</string>
+    <string name="partial_screen_shot">Čiastočná snímka obrazovky</string>
+    <string name="screen_shot">Urobte snímku obrazovky</string>
+    <string name="show_menu">Zobraziť ponuku</string>
+    <string name="split_screen">Otvoriť rozdelenú obrazovku</string>
+    <string name="three_gesture_down">Posuňte 3 prsty nadol</string>
+    <string name="three_gesture_horizontal">Potiahnite vodorovne %d prstami</string>
+    <string name="three_gesture_long_press">Stlačte a podržte %d prstami</string>
+    <string name="three_gesture_pc_mode">Zapnúť režim PC</string>
+    <string name="turn_on_torch">Zapnúť svietidlo</string>
+    <string name="under_keyguard">Vypnuť obrazovku</string>     
 </resources>
