--- a/Slovak/main/MiuiCompass.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiCompass.apk/res/values-sk/strings.xml
@@ -56,17 +56,17 @@
     <string name="friday_shortest">Pia</string>
     <string name="get_location">Prístup k polohe</string>
     <string name="guide_toast">"Prosím kalibrujte kompas pohybom v tvare osmičky."</string>
-    <string name="latitude">LAT</string>
-    <string name="location_east">E</string>
+    <string name="latitude">Zem. šírka</string>
+    <string name="location_east">V</string>
     <string name="location_enable">Povoliť</string>
     <string name="location_enable_later">Neskôr</string>
     <string name="location_enabled">Zisťovanie polohy je povolené. Môžete to kedykoľvek zmeniť v nastaveniach polohy.</string>
-    <string name="location_north">N</string>
+    <string name="location_north">S</string>
     <string name="location_not_enabled_summary">Pre správne fungovanie aplikácie je potrebný prístup k polohe zariadenia.</string>
     <string name="location_not_enabled_title">Povoliť zisťovanie polohy</string>
-    <string name="location_south">S</string>
-    <string name="location_west">W</string>
-    <string name="longitude">LON</string>
+    <string name="location_south">J</string>
+    <string name="location_west">Z</string>
+    <string name="longitude">Zem. dĺžka</string>
     <string name="miuix_appcompat_action_mode_deselect_all">Odznačiť</string>
     <string name="miuix_appcompat_action_mode_select_all">Všetko</string>
     <string name="miuix_appcompat_action_mode_title_empty">Vybrať položky</string>
@@ -164,4 +164,17 @@
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+    
+    
+     <string name="compass_settings">Nastavenia</string>
+     <string name="cta_v2_app_purpose">zobrazujúci smer, súradnice, atmosférický tlak a aktuálnu nadmorskú výšku</string>
+     <string name="dialog_body_no_network_china">Pripojte sa k Wi-Fi alebo zapnite mobilné dáta.</string>
+     <string name="expand_button_title">Pokročilé</string>
+     <string name="gradienter_title">Natočenie</string>
+<string name="location_not_enabled_summary_no_pressure_sensor">Kompas potrebuje prístup k vašej polohe, aby mohol zobraziť vaše aktuálne súradnice.</string>
+      <string name="new_cta_app_purpose">zobraziť trasu a súradnice</string>
+      <string name="not_set">Nenastavené</string>
+<string name="remove_icon_description_content">Kompas je systémová aplikácia. Po odstránení skratky na ploche ju nebudete môcť použiť na kontrolu smeru, súradníc, atmosférického tlaku a aktuálnej nadmorskej výšky.</string>
+      <string name="remove_icon_description_title">Chcete odstrániť \"Kompas\" z plochy?</string>
+     <string name="unit_degree">Stupňov</string>    
 </resources>
