--- a/Slovak/main/MiLinkService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiLinkService.apk/res/values-sk/strings.xml
@@ -339,4 +339,6 @@ Pred použitím tejto funkcie si prečítajte a vyjadrite súhlas s našimi zmlu
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+	
+    <string name="cast_image_des">Návod na vysielanie</string>	
 </resources>
