--- a/Slovak/main/Contacts.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Contacts.apk/res/values-sk/strings.xml
@@ -1399,7 +1399,7 @@ Synchronizujte ich teraz."</string>
     <string name="t9_search_empty_video_call">Video hovor</string>
     <string name="t9_search_guide_pinyin">Stlačte 7 a 8 pre vyhľadanie Svokry</string>
     <string name="t9_search_guide_pinyin_title1">Rýchle vyhľadanie kontaktu stlačením písmen</string>
-    <string name="t9_search_guide_pinyin_title2">Stlačte 2 alebo 3 pre vyhľadanie Adam Ferko</string>
+    <string name="t9_search_guide_pinyin_title2">Stlačte 3 a 7 pre vyhľadanie Dušan Sivý</string>
     <string name="t9_search_guide_zhuyin">Stlačte 7 a 8 pre vyhľadanie Svokry</string>
     <string name="t9_search_guide_zhuyin_title1">Rýchle vyhľadanie kontaktu stlačením písmen</string>
     <string name="t9_search_guide_zhuyin_title2">Stlačte 5 alebo 6 pre vyhľadanie Jožko Mrkvička</string>
