--- a/Slovak/main/FileExplorer.apk/res/values-sk/strings.xml
+++ b/Slovak/main/FileExplorer.apk/res/values-sk/strings.xml
@@ -14,7 +14,7 @@
     <string name="agree">OK</string>
     <string name="already_liked">Už je v obľúbených</string>
     <string name="already_signin_description">Podpísať sa môžete len raz za 24h, skúste to opäť zajtra.</string>
-    <string name="app_all_purpose">Vitajte v aplikácii Súbory!</string>
+    <string name="app_all_purpose">"Vitajte v aplikácii Súbory! "</string>
     <string name="app_all_purpose_pad">Vitajte v aplikácii Súbory! Pomocou tejto aplikácie môžete spravovať vaše súbory na úložisku.</string>
     <string name="app_function">Spravuje súbory vo vašom zariadení</string>
     <string name="app_name">Súbory</string>
@@ -978,5 +978,6 @@ Získali ste ďalších %1$s"</string>
      <string name="widget_choose_file">Dotykom pridáte súbory</string>
      <string name="widget_choose_fragment_title">Vyberte typ súboru</string>
      <string name="widget_finish">Hotovo</string>
+    <string name="import_files_from_old_phones">Importovať</string>
                     
 </resources>
