--- a/Slovak/main/MiuiCamera.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiCamera.apk/res/values-sk/strings.xml
@@ -1486,7 +1486,7 @@ Objekt bude ostrý na rozmazanom pozadí."</string>
      <string name="newbie_privacy_watermark_title">Chráňte svoje dokumenty</string>
     
 <string name="lighting_bright_red">Scarlet</string>
-     <string name="lighting_dazzling">Trámy</string>
+     <string name="lighting_dazzling">Lúče</string>
      <string name="lighting_dreamland">Sen</string>
      <string name="lighting_gorgeous">Motley</string>
      <string name="lighting_lanshan">Dekadencia</string>
